# cclerical

./: .gitignore  LICENSE  Makefile  TODO  ccl-ast-irram.c  ccl-ssa.c  ccl-ssa.h  ccl.c  ccl.h  cclerical.c  cclerical.h  cclerical.l  cclerical.y  clerical.c  clerical.h  clerical.l  clerical.y  meson.build  meson_options.txt  std-irram.cc  test.c
doc/: ccl.tex
examples/: .gitignore  Makefile  abs-power-int.t17  abs.t17  if.t17  if2.t17  logmap.t17  meson.build  read-only.t17  sqrt-bnd.t17  sqrt.t17
